--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
+  <meta name="google" content="notranslate">
+
   <title>Doomscroll</title>
   <base href="/">
   <meta name="description" content="Scroll to the highest level.">
